example/lib/src/arbs/errors/example_de.arb
{
  "@@locale": "de",
  "@@author": "example@gmail.com",
  "@@last_modified": "2025-08-26T14:28:36.220548Z",
  "@@comment": "Generated from Google Sheets",
  "@@context": "From Google Sheets",
  "error": "Ein Fehler ist aufgetreten",
  "@error": {
    "description": "Ошибка"
  },
  "unexpectedError": "Ein unerwarteter Fehler ist aufgetreten",
  "@unexpectedError": {
    "description": "Произошла какая то ошибка"
  },
  "authErrorMessages": "{errorCode, select, passwordLengthError{Das Passwort muss mindestens 6 Zeichen lang sein} invalidEmailOrPhoneNumberError{Bitte geben Sie eine gültige E-Mail-Adresse oder eine Telefonnummer im internationalen Format an. Beispiele: me@example.com und +1234567890987.} invalidEmailError{E-Mail-Adresse ist nicht gültig} operationNotAllowedError{Operation ist nicht erlaubt} weakPasswordError{Passwort ist zu schwach} userTokenExpiredError{Benutzer-Token abgelaufen} invalidPhoneNumberError{Bitte geben Sie die Telefonnummern im internationalen Format an, beginnend mit „+“ und der Landesvorwahl.} invalidActionCodeError{Aktion-Code ist nicht gültig} networkRequestFailedError{Netzwerkanfrage fehlgeschlagen} tooManyRequestsError{Zu viele Anfragen} acceptTermsAndConditionsError{Bitte akzeptieren Sie die Geschäftsbedingungen und bestätigen Sie die Datenschutzrichtlinie.} acceptAIConsentError{Bitte erkennen Sie an, dass die Beratungen mit einer KI und nicht mit einem lizenzierten medizinischen Fachpersonal erfolgen.} emailOrPhoneError{E-Mail-Adresse oder Telefonnummer-Fehler} passwordError{Passwort-Fehler} unknownError{Unbekannter Fehler} googleSSOError{Google SSO-Fehler} emailAlreadyInUse{Die Telefonnummer ist bereits von einem anderen Konto verwendet} invalidCredentialError{Die Anmeldedaten sind ungültig.} invalidAppCredentialError{Ungültige Anmeldeinformationen der App} invalidVerificationCodeError{Ungültiger Bestätigungscode} other{Unbekannter Fehler}}",
  "@authErrorMessages": {
    "description": "Ошибка аутентификации",
    "placeholders": {
      "errorCode": {
        "type": "String"
      }
    }
  },
  "bugReportSentText": "Fehlerbericht wurde erfolgreich gesendet.",
  "@bugReportSentText": {
    "description": "Сообщение об успешной отправке баг репорта"
  }
}